src/main/java/com/example/LeeGamja/error/exception/ForbiddenException.java
package com.example.LeeGamja.error.exception;

import com.example.LeeGamja.error.ErrorCode;

public class ForbiddenException extends BusinessException {
    public ForbiddenException(ErrorCode errorCode, String message) {
        super(errorCode, message);
    }
}
